--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /storage/*.key
 /vendor
 .env
+.env.testing
+.env.docker
+.env.docker.testing
 .env.backup
 .phpunit.result.cache
 docker-compose.override.yml
